--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Umar Musyaffa - Mini Portofolio</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+
 </head>
 <body>
-    
+    <header class="nav-header">
+        <a class="logo">Musya</a>
+        <nav>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#foot">Package</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr>
+    <article class="content-container">
+        <section class="content-title">
+            <h1>Umar Musyaffa Portofolio</h1>
+            <h2 style="font-size: 15px;">
+            Hello, I'm Musya from Indonesia, i have experience in Motion Graphic & Animator Compositing. 
+            Have more than three years experience in video editing, i use After Effect as my software.</h2> 
+            </section>
+        <section class="article-content">
+            <article class="item">
+                <div class="item-article">
+                    <div class="yt-holder"><iframe width="560" height="315" src="https://www.youtube.com/embed/PKcGWrD2iic?si=obwEJ8IOATNtviSJ" title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="desc-item">
+                    <h1>Use this space to provide users with more information about your offer. Consider it a follow-up to your headline and explain the benefits of your service or product</h1>
+                </div>
+            </article>
+            <aside class="form-container">
+                <form action="" method="post"> 
+                    <h1> Your Order </h1>
+                    <br/>
+                        <label for="name">Nama</label>  : <input id="name" type="text" placeholder="Your Name"> 
+                    <br/>
+                        <label for="email">Email</label> : <input id="email" type="email" placeholder="Your Email">
+                    <br/>
+                        <label>Tanggal Deadline</label> : <input type="date">
+                    <br/>
+                        <label>Requirements</label> :  <textarea placeholder="Please provide the necessary asset"></textarea>
+                    <br/>
+                        <label>Instruction</label> : <textarea placeholder="Your detailed instruction or reference"></textarea>
+                    <br/>
+                    <input type="submit" value="submit" >
+                </form>
+            </aside>
+        </section>  
+    </article>
+    <footer id="foot">
+        <h2>
+            Umar Musyaffa
+        </h2>
+        <p>
+            <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Nostrum fugiat libero asperiores iusto vero omnis mollitia accusamus modi illum ex praesentium, 
+            voluptate, expedita incidunt dicta voluptatem eius cumque sed ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Deleniti veniam soluta, illo corporis vitae quae autem vero! Sit esse iure quidem assumenda adipisci atque 
+            illo cumque temporibus omnis. Recusandae, veritatis.</br></p>
+    </footer>
 </body>
+
 </html>
