--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,61 +9,97 @@
         <a class="logo">Musya</a>
         <nav>
             <ul>
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="#foot">Package</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#package">Package</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+    <section class="home">
+        <img src="../assets/3.png" id="stars" >
+        <img src="../assets/2.png" id="moon">
+        <img src="../assets/1.png" id="bgMount">
+        <h2 id="welcome">Welcome</h2>
+        <img src="../assets/4.png" id="sdMount">
+    </section>
     <hr>
     <article class="content-container">
         <section class="content-title">
             <h1>Umar Musyaffa Portofolio</h1>
-            <h2 style="font-size: 15px;">
+            <h2 style="font-size: 15px; color: white;">
             Hello, I'm Musya from Indonesia, i have experience in Motion Graphic & Animator Compositing. 
             Have more than three years experience in video editing, i use After Effect as my software.</h2> 
             </section>
         <section class="article-content">
             <article class="item">
                 <div class="item-article">
-                    <div class="yt-holder"><iframe width="560" height="315" src="https://www.youtube.com/embed/PKcGWrD2iic?si=obwEJ8IOATNtviSJ" title="YouTube video player" frameborder="0" 
+                    <div class="yt-holder"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/PKcGWrD2iic?si=obwEJ8IOATNtviSJ" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="desc-item">
-                    <h1>Use this space to provide users with more information about your offer. Consider it a follow-up to your headline and explain the benefits of your service or product</h1>
+                    <h1>Experienced freelancers working in video editing & motion graphics. We specialize in making videos for virtual youtuber, whether it is music video, debut video, intro, etc. Here are some of my Portofolio</h1>
                 </div>
             </article>
             <aside class="form-container">
                 <form action="" method="post"> 
                     <h1> Your Order </h1>
                     <br/>
-                        <label for="name">Nama</label>  : <input id="name" type="text" placeholder="Your Name"> 
+                        <label for="name">Nama</label>  : <input required id="form_name" type="text" placeholder="Your Name"> 
                     <br/>
-                        <label for="email">Email</label> : <input id="email" type="email" placeholder="Your Email">
+                        <label for="email">Email</label> : <input required id="form_email" type="email" placeholder="Your Email">
                     <br/>
-                        <label>Tanggal Deadline</label> : <input type="date">
+                        <label>Tanggal Deadline</label> : <input id="form_date" type="date">
                     <br/>
-                        <label>Requirements</label> :  <textarea placeholder="Please provide the necessary asset"></textarea>
+                        <label>Requirements</label> :  <textarea required id="form_req" placeholder="Please provide the necessary asset"></textarea>
                     <br/>
-                        <label>Instruction</label> : <textarea placeholder="Your detailed instruction or reference"></textarea>
+                        <label>Instruction</label> : <textarea id="form_inst" placeholder="Your detailed instruction or reference"></textarea>
                     <br/>
-                    <input type="submit" value="submit" >
+                    <input type="submit" value="submit" id="submit" >
                 </form>
             </aside>
         </section>  
     </article>
-    <footer id="foot">
+    <section class="package">
         <h2>
-            Umar Musyaffa
+            About this gig
         </h2>
         <p>
-            <br>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Nostrum fugiat libero asperiores iusto vero omnis mollitia accusamus modi illum ex praesentium, 
-            voluptate, expedita incidunt dicta voluptatem eius cumque sed ad. Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            Deleniti veniam soluta, illo corporis vitae quae autem vero! Sit esse iure quidem assumenda adipisci atque 
-            illo cumque temporibus omnis. Recusandae, veritatis.</br></p>
-    </footer>
+            <br>
+            You will get:
+            <br>
+            <br>
+            Basic: Simple lyric MV with animated lyric, but without animated custom background. 1080p FHD
+            Standard: Lyric MV with animated lyric, custom BG available (simple 2D/paid stock footage), & simple camera movement. 1080p FHD
+            Premium: MV with stylized lyric animation, custom BG available (complex 2D/paid stock footage/semi 3D) with animated objects, & variative camera movement. Storytelling available. 4K UHD
+            <br>
+            <br>
+            You should provide:
+            <br>
+            <br>
+            Your music
+            Your character, background, & other assets.
+            Your lyric [for original song or multiple vocals]
+            Script/Storyboard for "storytelling" [Premium only]
+            <br>
+            *Unless noted, the video will be 24FPS.
+            <br>
+            <br>
+            Thinking of something more customized? Don't worry, everything is negotiable!
+            <br>
+            Just contact us! Thank you!</br></p>
+        </section>
+        <footer class="foot">
+            <h2>Contact Me at</h2>
+            <section class="contact" id="contact">
+                <ul>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#">Facebook</a></li>
+                </ul>
+            </section>
+        </footer>
+    <script src="../javascript/script.js"></script>
 </body>
 
 </html>
