--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,10 +33,10 @@
         <section class="article-content">
             <article class="item">
                 <div class="item-article">
-                    <div class="yt-holder"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/PKcGWrD2iic?si=obwEJ8IOATNtviSJ" title="YouTube video player" frameborder="0" 
+                    <div class="yt-holder">
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/PKcGWrD2iic?si=obwEJ8IOATNtviSJ" title="YouTube video player" frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
-                </div>
                 <div class="desc-item">
                     <h1>Experienced freelancers working in video editing & motion graphics. We specialize in making videos for virtual youtuber, whether it is music video, debut video, intro, etc. Here are some of my Portofolio</h1>
                 </div>
