--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Umar Musyaffa - Mini Portofolio</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
@@ -16,11 +16,11 @@
         </nav>
     </header>
     <section class="home">
-        <img src="../assets/3.png" id="stars" >
-        <img src="../assets/2.png" id="moon">
-        <img src="../assets/1.png" id="bgMount">
+        <img src="assets/3.png" id="stars" >
+        <img src="assets/2.png" id="moon">
+        <img src="assets/1.png" id="bgMount">
         <h2 id="welcome">Welcome</h2>
-        <img src="../assets/4.png" id="sdMount">
+        <img src="assets/4.png" id="sdMount">
     </section>
     <hr>
     <article class="content-container">
@@ -99,6 +99,6 @@
                 </ul>
             </section>
         </footer>
-    <script src="../javascript/script.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
