--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>Umar Musyaffa - Mini Portofolio</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 </head>
 <body>
@@ -99,6 +99,6 @@
                 </ul>
             </section>
         </footer>
-    <script src="javascript/script.js"></script>
+    <script src="JAVASCRIPT/script.js"></script>
 </body>
 </html>
